src/main/java/com/example/sbfeb7/lib/errors/ValidationError.java
package com.example.sbfeb7.lib.errors;

import lombok.AllArgsConstructor;
import lombok.Data;

@Data
@AllArgsConstructor
public class ValidationError {
    private String field;
    private String message;
}

